Fix collapse

--- a/htdocs/content/themes/groupe-ct/assets/sass/elements/blocs/_bloc10.scss
+++ b/htdocs/content/themes/groupe-ct/assets/sass/elements/blocs/_bloc10.scss
@@ -2,7 +2,7 @@
 
   @include flexbox();
   @include flex-direction(column);
-  @include align-items(center);
+  @include align-items(baseline);
 
   background-color: white;
 
